--- a/medusa/package.json
+++ b/medusa/package.json
@@ -31,6 +31,7 @@
     "@mikro-orm/knex": "6.4.3",
     "@mikro-orm/migrations": "6.4.3",
     "@mikro-orm/postgresql": "6.4.3",
+    "@vymalo/medusa-minio": "^1.0.10",
     "awilix": "^8.0.1",
     "medusa-file-minio": "^1.3.2",
     "pg": "^8.13.0"
