--- a/medusa/package.json
+++ b/medusa/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "medusa",
+  "name": "medusa-starter-default",
   "version": "0.0.1",
   "description": "A starter for Medusa projects.",
   "author": "Medusa (https://medusajs.com)",
@@ -15,30 +15,21 @@
   "scripts": {
     "build": "medusa build",
     "seed": "medusa exec ./src/scripts/seed.ts",
-    "start": "medusa start",
+    "start": "medusa db:migrate && medusa start",
     "dev": "medusa develop",
-    "predeploy": "medusa db:migrate",
     "test:integration:http": "TEST_TYPE=integration:http NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
-    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit",
+    "test:integration:modules": "TEST_TYPE=integration:modules NODE_OPTIONS=--experimental-vm-modules jest --silent=false --runInBand --forceExit",
     "test:unit": "TEST_TYPE=unit NODE_OPTIONS=--experimental-vm-modules jest --silent --runInBand --forceExit"
   },
   "dependencies": {
-    "@medusajs/admin-sdk": "2.8.8",
-    "@medusajs/cli": "2.8.8",
-    "@medusajs/framework": "2.8.8",
-    "@medusajs/medusa": "2.8.8",
-    "@mikro-orm/core": "6.4.3",
-    "@mikro-orm/knex": "6.4.3",
-    "@mikro-orm/migrations": "6.4.3",
-    "@mikro-orm/postgresql": "6.4.3",
-    "@vymalo/medusa-minio": "^1.0.10",
-    "awilix": "^8.0.1",
-    "medusa-file-minio": "^1.3.2",
-    "pg": "^8.13.0"
+    "@medusajs/admin-sdk": "2.11.3",
+    "@medusajs/cli": "2.11.3",
+    "@medusajs/framework": "2.11.3",
+    "@medusajs/medusa": "2.11.3",
+    "medusa-file-minio": "^1.3.2"
   },
   "devDependencies": {
-    "@medusajs/test-utils": "2.8.8",
-    "@mikro-orm/cli": "6.4.3",
+    "@medusajs/test-utils": "2.11.3",
     "@swc/core": "1.5.7",
     "@swc/jest": "^0.2.36",
     "@types/jest": "^29.5.13",
@@ -56,6 +47,5 @@
   },
   "engines": {
     "node": ">=20"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
