--- a/medusa/package.json
+++ b/medusa/package.json
@@ -26,8 +26,8 @@
     "@medusajs/cli": "2.11.3",
     "@medusajs/framework": "2.11.3",
     "@medusajs/medusa": "2.11.3",
-    "medusa-file-minio": "^1.3.2"
-  },
+    "@vymalo/medusa-minio": "^1.0.0"
+  }
   "devDependencies": {
     "@medusajs/test-utils": "2.11.3",
     "@swc/core": "1.5.7",
