--- a/medusa/Dockerfile
+++ b/medusa/Dockerfile
@@ -15,7 +15,6 @@ RUN yarn run build
 
 FROM node:22
 
-# Bug https://github.com/coollabsio/coolify/issues/1930
 ARG COOKIE_SECRET
 ARG JWT_SECRET
 ARG STORE_CORS
@@ -38,10 +37,12 @@ RUN apt-get update && apt-get install -y python3 python3-pip python-is-python3
 
 COPY --from=builder /app/medusa/.medusa ./.medusa
 
+# ADD THIS LINE - Copy config file to the server directory
+COPY --from=builder /app/medusa/medusa-config.js ./.medusa/server/medusa-config.js
+
 WORKDIR /app/medusa/.medusa/server
 
 RUN yarn install --production
-
 
 COPY migrations.sh /app/medusa/.medusa/server/migrations.sh
 RUN chmod +x /app/medusa/.medusa/server/migrations.sh
@@ -49,5 +50,4 @@ RUN /app/medusa/.medusa/server/migrations.sh
 
 RUN rm /app/medusa/.medusa/server/migrations.sh
 
-CMD ["yarn", "run", "start"]
 CMD ["yarn", "run", "start"]
